tests/baselines/reference/computedPropertyNames34_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames34_ES5.ts(5,18): error TS2302: Static members cannot reference class type parameters.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames34_ES5.ts (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        static bar() {
            var obj = {
                [foo<T>()]() { }
                     ~
!!! error TS2302: Static members cannot reference class type parameters.
            };
            return 0;
        }
    }